fixed the body/comments overflow problem

--- a/dash/styles.css
+++ b/dash/styles.css
@@ -1,6 +1,8 @@
 html{
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 body{
@@ -79,8 +81,9 @@ ul{
     min-width:500px;*/
     position:relative;
     z-index: 225;
+    margin: auto;
     margin-top: -20px;
-	width:100%;
+	width:97%;
 	height:85%;
     min-height: 660px;
 	border:solid 1px #999;
@@ -231,6 +234,7 @@ ul{
 }
 
 #commentsDialog{
+    display:none;
     padding: 5px 0px 5px 3px;
     background: #eee;
     position:absolute;
